refactor: apply ErrorProne annotations and fix static analysis warnings
Add @DoNotCall and @InlineMe annotations for deprecated methods.
Fix locale-specific operations, replace printStackTrace with structured
logging, and improve collection usage patterns. Migrate remaining
process classes to Kotlin.